최근 진료 보기에 date 추가

--- a/.gitignore
+++ b/.gitignore
@@ -33,5 +33,12 @@ out/
 /nbdist/
 /.nb-gradle/
 
+### aws.yml ###
+resources/aws.yml
+src/main/resources/aws.yml
+
+resources/application.yml
+src/main/resources/application.yml
+
 ### VS Code ###
 .vscode/
